fix video display on mobile

--- a/frontend/website-client/src/components/video-modal.scss
+++ b/frontend/website-client/src/components/video-modal.scss
@@ -18,6 +18,14 @@ $shelf-padding-extra: 2em;
       
   .pure-modal {
     width: 100%;
+
+    .panel-body {
+      @media screen and (orientation: landscape) {
+        @include media-breakpoint-down(md) {
+         padding: 0;
+        }
+      }
+    }
   }
   
   .panel-body {
@@ -30,6 +38,12 @@ $shelf-padding-extra: 2em;
     width: 100%;
     max-width: 1400px;
     margin: 0 auto;
+
+    @media screen and (orientation: landscape) {
+      @include media-breakpoint-down(md) {
+       padding: 0;
+      }
+    }
   }
   
   .video-js {
@@ -38,6 +52,12 @@ $shelf-padding-extra: 2em;
 
     &.wirewax {
       height: 80vh;
+
+      @media screen and (orientation: landscape) {
+        @include media-breakpoint-down(md) {
+          height: 100vh;
+        }
+      }
     }
   }
 }
